fixed overflow visible in chrome

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -24,7 +24,6 @@
   width: 100%;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  overflow: scroll;
 }
 
 .sidescroll > *:last-child {
